<resources>

    <string name="app_name">Projeto Final</string>
    <string name="welcome">welcome to the app</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="myNotes">My Notes</string>
    <string name="searchYourNotes">Search your notes</string>
    <string name="notes_title">Notes title</string>
    <string name="notes_description">Notes description</string>
    <string name="note_text">Insert note text</string>
    <string name="title_activity_main_login" translatable="false">MainLogin</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous" translatable="false">Previous</string>

    <string name="hello_first_fragment" translatable="false">Hello first fragment</string>
    <string name="hello_second_fragment" translatable="false">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_maps">Map</string>
    <string name="notas_pessoais">My notes</string>
    <string name="reports_map">Reports Map</string>
    <string name="logout">Logout</string>
    <string name="all_reports">All reports</string>
    <string name="bem_vindo">Welcome</string>
    <string name="type">Type</string>
    <string name="description">Description</string>
    <string name="save_report">Save report</string>
    <string name="title_activity_create_report">CreateReport</string>
    <string name="create_report">Create report</string>
    <string name="create_report2">Create report</string>
    <string name="remember">Remember</string>
    <string name="acessDenied">You do not have access to this report!</string>
    <string name="camposNecessarios">Fill in the required fields.</string>
    <string name="camposVaziosEditReport">Empty fields, report has not been edited!!</string>
    <string name="notaGuardada">Note saved successfully.</string>
    <string name="notaNaoGuardada">Note not saved, empty fields.</string>
    <string name="editcancel">Edit canceled, empty fields.</string>
    <string name="deleteCancel">\"Note was not erased, empty fields. \"</string>
    <string name="notasTodasApagadas">Notes successfully deleted.</string>
    <string name="delete_notes">Delete notes</string>


</resources>