<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateNote"
    android:background="@color/background">

    <ImageView
        android:id="@+id/img_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:src="@drawable/ic_back"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:tint="@color/white"
        />

    <ImageView
        android:id="@+id/img_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:src="@drawable/ic_check"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@color/white" />


    <EditText
        android:id="@+id/insertTite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_10sdp"
        android:layout_margin="@dimen/_10sdp"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@+id/img_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/notes_title"
        android:textColorHint="@color/grey"
        android:backgroundTint="@color/grey"
        android:maxLines="1"
        android:ellipsize="end"
        android:textSize="@dimen/_15ssp"
        android:textStyle="bold"
        android:maxLength="50"
        android:textColor="@color/white"
         />

    <TextView
        android:id="@+id/dateTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginStart="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_5sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        app:layout_constraintTop_toBottomOf="@+id/insertTite"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColorHint="@color/grey"
        android:backgroundTint="@color/grey"
        android:maxLines="1"
        android:ellipsize="end"
        android:textSize="@dimen/_8ssp"
        android:maxLength="50"
        android:textColor="@color/white"
        />
    


    <LinearLayout
        android:id="@+id/layout_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@+id/dateTime"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal">

    <View
        android:layout_width="@dimen/_5sdp"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/_5sdp"
        android:background="@color/white"
        android:layout_marginLeft="@dimen/_5sdp" />
        />
        <EditText
            android:id="@+id/insertDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_10sdp"
            android:layout_margin="@dimen/_10sdp"
            android:inputType="text"
            android:hint="@string/notes_description"
            android:textColorHint="@color/grey"
            android:backgroundTint="@color/grey"
            android:maxLines="1"
            android:ellipsize="end"
            android:textSize="@dimen/_12ssp"
            android:maxLength="100"
            android:textColor="@color/white"
            />
    </LinearLayout>


    <EditText
        android:id="@+id/insertText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_10sdp"
        android:layout_margin="@dimen/_10sdp"
        android:inputType="textImeMultiLine"
        app:layout_constraintTop_toBottomOf="@+id/layout_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/note_text"
        android:textColorHint="@color/grey"
        android:backgroundTint="@color/grey"
        android:textSize="@dimen/_12ssp"
        android:textStyle="bold"
        android:textColor="@color/white"

        />


    <Button
        android:id="@+id/saveNote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:text="Save Note"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>